[build-system]
requires = ["setuptools", "wheel", "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
#build-backend = "setuptools.build_meta"
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NiBAx"
version = "0.1"
description = "BrainChart Utility and Analysis Package"
authors = [
    "Ahmed Abdulkadir <Ahmed.Abdulkadir@pennmedicine.upenn.edu>",
    "Ashish Singh <Ashish.Singh@pennmedicine.upenn.edu>",
    "Randa Melhem <Randa.Melhem@Pennmedicine.upenn.edu>"
]
keywords = ["neuro-imaging", "MRI", "big data"]

readme = "README.md"

include = ["NiBAx/plugins/data/MUSE_ROI_Dictionary.csv",
           "NiBAx/**/*.ui",
           "NiBAx/**/*.yapsy-plugin",
           "*.png"]
packages = [
    {include = "NiBAx"}
]


[tool.briefcase]
project_name = "NiBAx"
name = "NiBAx"
bundle = "com.example"
version = "0.1"
description = "BrainChart Utility and Analysis Package"
authors = [
    "Ahmed Abdulkadir <Ahmed.Abdulkadir@pennmedicine.upenn.edu>",
    "Ashish Singh <Ashish.Singh@pennmedicine.upenn.edu>",
    "Randa Melhem <Randa.Melhem@Pennmedicine.upenn.edu>"
]
keywords = ["neuro-imaging", "MRI", "big data"]

readme = "README.md"

include = ["NiBAx/plugins/data/MUSE_ROI_Dictionary.csv",
           "NiBAx/**/*.ui",
           "NiBAx/**/*.yapsy-plugin",
           "*.png"]
packages = [
    {include = "NiBAx"}
]


[tool.briefcase.app.NiBAx.macOS]
requires = []

[tool.briefcase.app.NiBAx.linux]
requires = []
system_requires = []

[tool.briefcase.app.NiBAx.windows]
requires = []


[tool.briefcase.app.NiBAx]
formal_name = "NiBAx"
description = "The coolest app ever"
icon = "NiBAx/resources/icon" # Briecase will choose the right extension depending the os (png,ico,...)
sources = ['NiBAx']
requires = ['cycler==0.10.0',
'joblib==1.0.1',
'MarkupSafe==2.0.1',
'matplotlib>=3.4.2',
'nibabel==3.2.1',
'numpy>=1.21',
'neuroHarmonize==2.1',
'pandas==1.3.4',
'Pillow>=9.0.0',
'pyparsing==2.4.7',
'PyQt5>=5.15.4',
'PyQt5_Qt5==5.15.2',
'PyQt5_sip==12.9.0',
'dill==0.3.4',
'future==0.18.2',
'python_dateutil==2.8.1',
'pytz==2021.1',
'scikit_learn>=1.0.2',
'scipy>=1.6.3',
'seaborn==0.11.1',
'six==1.16.0',
'statsmodels==0.13.0',
'wheel>=0.37.1',
'Yapsy==1.12.2',
'pytest==7.0.1',
'pytest-qt==4.0.2']


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
briefcase = "^0.3.5"
cycler = "^0.10.0"
joblib = "^1.0.1"
MarkupSafe = "2.0.1"
matplotlib = "^3.4.2"
nibabel = "^3.2.1"
numpy = "^1.21"
neuroHarmonize = "2.1"
pandas = "1.3.4"
Pillow = "^9.0.0"
poetry = "^1.1.13"
poetry_core = "^1.0.7"
pyparsing = "^2.4.7"
PyQt5 = "^5.15.4"
PyQt5_Qt5 = "^5.15.2"
PyQt5_sip = "^12.9.0"
dill = "^0.3.4"
future = "^0.18.2"
python_dateutil = "^2.8.1"
pytz = "^2021.1"
scikit_learn = "^1.0.2"
scipy = "^1.6.3"
seaborn = "^0.11.1"
six = "^1.16.0"
statsmodels = "^0.13.0"
Yapsy = "^1.12.2"
Jinja2 = "^2.11.3"
pytest = "7.0.1"
pytest-qt = "4.0.2"

[tool.poetry.urls]
homepage = "https://cbica.github.io/NiBAx"
repository = "https://github.com/CBICA/NiBAx"
documentation = "https://cbica.github.io/NiBAx"


[tool.poetry.scripts]
NiBAx = "NiBAx:main"
