[metadata]
# replace with your username:
name = iSTAGING-Tools-pkg-CBICA
version = 0.0.1
author = Ahmed Abdulkadir and Ashish Singh
author_email = ahmed.abdulkadir@pennmedicine.upenn.edu
description = iSTAGING Utility and Analysis Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CBICA/iSTAGING-Tools
project_urls =
    Bug Tracker = https://github.com/CBICA/iSTAGING-Tools/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
#package_dir = iSTAGING-Tools
packages = find:
python_requires = >=3.8

[options.packages.find]
#where = iSTAGING-Tools
