[metadata]
name = brainchart
version = 0.0.2
author = Ahmed Abdulkadir and Ashish Singh
author_email = ahmed.abdulkadir@pennmedicine.upenn.edu
description = BrainChart Utility and Analysis Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CBICA/BrainChart
project_urls =
    Bug Tracker = https://github.com/CBICA/BrainChart/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
