[metadata]
name = NiBAx
version = 0.1
author = Ahmed Abdulkadir and Ashish Singh
author_email = ahmed.abdulkadir@pennmedicine.upenn.edu
description = BrainChart Utility and Analysis Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CBICA/BrainChart
project_urls =
    Bug Tracker = https://github.com/CBICA/BrainChart/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = 
                cycler==0.10.0
                #dtale==1.61.1
                joblib==1.0.1
                matplotlib>=3.4.2
                nibabel==3.2.1
                numpy>=1.20.3
                neuroHarmonize==2.1
                pandas==1.3.4
                Pillow>=9.0.0
                pyparsing==2.4.7
                PyQt5>=5.15.4
                PyQt5_Qt5==5.15.2
                PyQt5_sip==12.9.0
                dill==0.3.4
                future==0.18.2
                python_dateutil==2.8.1
                pytz==2021.1
                scikit_learn>=1.0.2
                scipy>=1.6.3
                seaborn==0.11.1
                six==1.16.0
                statsmodels==0.13.0
                wheel>=0.37.1
                Yapsy==1.12.2
